--- a/assets/index.jade
+++ b/assets/index.jade
@@ -11,4 +11,4 @@ html
       em.robust robust 
       em.css CSS
     #content
-      a.button View source
+      a.button(href='http://github.com/learnboost/stylus') View source
