--- a/assets/main.styl
+++ b/assets/main.styl
@@ -28,6 +28,7 @@ button(font-size = 12px)
   font-weight bold
   line-height 1
   text-align center
+  text-decoration none
   user-select none
   width 150px
   color #333
