--- a/assets/main.styl
+++ b/assets/main.styl
@@ -35,16 +35,12 @@ button(font-size = 12px)
 
   &:hover
     background #d9d9d9
-    -moz-box-shadow inset 0 0 1px 1px #eaeaea
-    -webkit-box-shadow inset 0 0 1px 1px #eaeaea
     box-shadow inset 0 0 1px 1px #eaeaea
     color #222
     cursor pointer
 
   &:active
     background #d0d0d0
-    -moz-box-shadow inset 0 0 1px 1px #e3e3e3
-    -webkit-box-shadow inset 0 0 1px 1px #e3e3e3
     box-shadow inset 0 0 1px 1px #e3e3e3
     color #000
 
@@ -74,5 +70,10 @@ h1
 #content
   margin 25px 0
 
+#example
+  pre
+    padding 10px 15px
+    border 1px solid #eee
+  
 a.button
   button()
