--- a/assets/main.styl
+++ b/assets/main.styl
@@ -72,8 +72,10 @@ h1
 
 #example
   pre
-    padding 10px 15px
-    border 1px solid #eee
+    float left
+    padding 10px 25px
   
 a.button
+  float left
+  clear both
   button()
