--- a/assets/main.styl
+++ b/assets/main.styl
@@ -67,13 +67,13 @@ h1
     &.css
       color lighten(dark-gray, 60%)
 
-#content
-  margin 25px 0
-
 #example
+  float left
+  margin 20px 0
   pre
     float left
-    padding 10px 25px
+    &#css
+      margin-left 35px
   
 a.button
   float left
