--- a/assets/index.jade
+++ b/assets/index.jade
@@ -10,6 +10,8 @@ html
       em.dynamic dynamic, 
       em.robust robust 
       em.css CSS
+    #ribbon
+      a(href='http://github.com/learnboost/stylus') Fork me on GitHub
     #content
       #example
         pre#stylus
