--- a/assets/main.styl
+++ b/assets/main.styl
@@ -28,6 +28,7 @@ ribbon()
   background-color #a00
   padding 1px 0
   overflow hidden
+  box-shadow 0 0 1px #eee
   a
     color #fff
     border 1px solid #faa
