--- a/main.css
+++ b/main.css
@@ -83,6 +83,9 @@ a.button:active {
   overflow: hidden;
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
+  -moz-box-shadow: 1px 1px 5px rgba(0,0,0,0.3);
+  -webkit-box-shadow: 1px 1px 5px rgba(0,0,0,0.3);
+  box-shadow: 1px 1px 5px rgba(0,0,0,0.3);
 }
 #ribbon a {
   color: #fff;
