--- a/assets/main.styl
+++ b/assets/main.styl
@@ -23,8 +23,8 @@ transform(args...)
 ribbon()
   position absolute
   top 2.5em
-  right 0
-  transform rotate(45deg)
+  left -3em
+  transform rotate(-45deg)
   background-color #a00
   padding 1px 0
   overflow hidden
