--- a/assets/main.styl
+++ b/assets/main.styl
@@ -23,12 +23,12 @@ transform(args...)
 ribbon()
   position absolute
   top 2.5em
-  left -3em
+  left -3.75em
   transform rotate(-45deg)
   background-color #a00
   padding 1px 0
   overflow hidden
-  box-shadow 1px 1px 5px rgba(0,0,0,0.3)
+  box-shadow 2px 2px 8px rgba(0,0,0,0.3)
   a
     color #fff
     border 1px solid #faa
@@ -67,8 +67,9 @@ button(font-size = 12px)
     color #000
 
 body
-  padding 50px
+  padding 80px 100px
   font small 'helvetica neue', helvetica, arial, sans-serif
+  color dark-gray
 
 h1
   margin 10px 0 15px 0
