--- a/assets/main.styl
+++ b/assets/main.styl
@@ -31,7 +31,7 @@ ribbon(color)
   box-shadow 2px 2px 8px rgba(0,0,0,0.3)
   a
     color #fff
-    border 1px solid lighten(color, 20%)
+    border 1px solid desaturate(lighten(color, 40%), 20%)
     display block
     margin 0.05em 0
     padding 0.5em 3.5em
