--- a/assets/main.styl
+++ b/assets/main.styl
@@ -93,6 +93,8 @@ h1
 #example
   float left
   margin 20px 0
+  border-top 1px dotted #eee
+  border-bottom 1px dotted #eee
   pre
     float left
     color #8D8D8D
