--- a/assets/index.jade
+++ b/assets/index.jade
@@ -3,6 +3,7 @@ html
   head
     title Stylus
     link(rel='stylesheet', href='main.css')
+    meta(http-equiv='Content-Type', content='text/html; charset=utf-8')
   body
     h1 Stylus
     p.tagline 
@@ -28,6 +29,7 @@ html
           | 
           | a.button
           |   border-radius 5px
+        #arrow ➡
         pre#css
           | body {
           |   font: 12px Helvetica, Arial, sans-serif;
