--- a/assets/main.styl
+++ b/assets/main.styl
@@ -91,6 +91,7 @@ h1
       color lighten(dark-gray, 60%)
 
 #example
+  position relative
   float left
   margin 40px 0
   border-top 1px dotted #eee
@@ -99,7 +100,15 @@ h1
     float left
     color #8D8D8D
     &#css
-      margin-left 35px
+      margin-left 100px
+  #arrow
+    position absolute
+    font-size 50px
+    top 85px
+    left 335px
+    text-shadow 2px 2px 3px #ddd
+    color #a00
+    opacity .75
   
 a.button
   float left
