--- a/assets/main.styl
+++ b/assets/main.styl
@@ -93,12 +93,14 @@ h1
 #example
   position relative
   float left
-  margin 40px 0
+  margin 20px 0
+  padding 20px 0
   border-top 1px dotted #eee
   border-bottom 1px dotted #eee
   pre
     float left
     color #8D8D8D
+    font-family monaco, 'helvetica neue', helvetica
     &#css
       margin-left 100px
   #arrow
@@ -108,7 +110,6 @@ h1
     left 335px
     text-shadow 2px 2px 3px #ddd
     color #a00
-    opacity .75
   
 a.button
   float left
