--- a/main.css
+++ b/main.css
@@ -30,13 +30,15 @@ h1 {
 #example {
   position: relative;
   float: left;
-  margin: 40px 0;
+  margin: 20px 0;
+  padding: 20px 0;
   border-top: 1px dotted #eee;
   border-bottom: 1px dotted #eee;
 }
 #example pre {
   float: left;
   color: #8d8d8d;
+  font-family: monaco, "helvetica neue", helvetica;
 }
 #example pre#css {
   margin-left: 100px;
@@ -48,7 +50,6 @@ h1 {
   left: 335px;
   text-shadow: 2px 2px 3px #ddd;
   color: #a00;
-  opacity: 0.75;
 }
 a.button {
   float: left;
