Added test for overriding css named colors

--- a/test/integration/tests/variables.styl
+++ b/test/integration/tests/variables.styl
@@ -2,6 +2,10 @@
 size = 14px
 font-family = 'Lucida Grande', Arial, sans-serif
 type = solid
+blue = #00c
+
+body
+  color blue(blue)
 
 body
   font size font-family
