--- a/assets/main.styl
+++ b/assets/main.styl
@@ -66,8 +66,14 @@ button(font-size = 12px)
     box-shadow inset 0 0 1px 1px #e3e3e3
     color #000
 
+html
+  dark = #dadada
+  background dark
+  background -moz-linear-gradient(-90deg, #f1f1f1, dark) fixed
+  background -webkit-gradient(linear, left top, left bottom, from(#f1f1f1), to(dark)) fixed
+
 body
-  padding 80px 130px
+  padding 120px 150px
   font small 'helvetica neue', helvetica, arial, sans-serif
   color dark-gray
 
@@ -75,6 +81,10 @@ h1
   margin 10px 0 15px 0
   font-weight bold
   font-size large
+
+h2
+  margin 0
+  font-size 18px
 
 .tagline
   margin 0
@@ -90,30 +100,26 @@ h1
     &.css
       color lighten(dark-gray, 60%)
 
-#example
-  position relative
-  float left
-  margin 20px 0
-  padding 20px 0
-  border-top 1px dotted #eee
-  border-bottom 1px dotted #eee
+#container
+  text-align center
+  #content
+    margin 0 auto
+    width 300px
+    text-align left
+
+.example
+  margin-top 65px
   pre
     float left
+    background white
+    border-radius 5px
+    padding 25px
     color #8D8D8D
-    font-family monaco, 'helvetica neue', helvetica
-    &#css
-      margin-left 100px
-  #arrow
-    position absolute
-    font-size 50px
-    top 85px
-    left 335px
-    text-shadow 2px 2px 3px #ddd
-    color #a00
+    font 12px\/1.4 monaco, 'helvetica neue', helvetica
   
 a.button
-  float left
   clear both
+  float left
   button()
 
 #ribbon
