--- a/assets/main.styl
+++ b/assets/main.styl
@@ -104,13 +104,13 @@ h2
   text-align center
   #content
     margin 0 auto
+    padding-top 40px
     width 300px
     text-align left
 
 .example
-  margin-top 65px
+  margin-top 25px
   pre
-    float left
     background white
     border-radius 5px
     padding 25px
