--- a/assets/index.jade
+++ b/assets/index.jade
@@ -47,4 +47,32 @@ html
             |   -webkit-border-radius 5px
             |   -moz-border-radius 5px
             |   border-radius 5px
-          
+        
+        .example
+          h2 Want DRY stylesheets?
+          pre
+            | border-radius(args...)
+            |   -webkit-border-radius args
+            |   -moz-border-radius args
+            |   border-radius args
+            | 
+            | body
+            |   font 12px Helvetica, Arial, sans-serif
+            | 
+            | a.button
+            |   border-radius(5px)
+        
+        .example
+          h2 How about transparent mixins?
+          pre
+            | border-radius(args...)
+            |   -webkit-border-radius args
+            |   -moz-border-radius args
+            |   border-radius args
+            | 
+            | body
+            |   font 12px Helvetica, Arial, sans-serif
+            | 
+            | a.button
+            |   border-radius 5px
+        
