--- a/assets/index.jade
+++ b/assets/index.jade
@@ -76,3 +76,33 @@ html
             | a.button
             |   border-radius 5px
         
+        .example.closing
+          h2 Get styling with Stylus
+          p
+            | If you want an expressive css language for nodejs with these
+            | features or the features listed below, head over to
+            a(href='http://github.com/learnboost/stylus') GitHub
+            | for more information.
+          .features
+            h3 Features
+            ul
+              li Variables              
+              li Mixins
+              li Arithmetic
+              li Type coercion
+              li Dynamic importing
+              li Conditionals
+              li Iteration
+              li Nested selectors
+              li Parent referencing
+              li Built-in functions (over 25)
+              li In-language functions
+              li Optional compression
+              li Optional image inlining
+              li Stylus executable
+              li Robust error reporting
+              li Single-line and multi-line comments
+              li CSS literal for those tricky times
+              li Character escaping
+              li TextMate bundle
+              li and more!
