--- a/assets/main.styl
+++ b/assets/main.styl
@@ -111,9 +111,10 @@ h2
 .example
   margin-top 25px
   pre
+    width 300px
     background white
     border-radius 5px
-    padding 25px
+    padding 30px
     color #8D8D8D
     font 12px\/1.4 monaco, 'helvetica neue', helvetica
   
