--- a/assets/index.jade
+++ b/assets/index.jade
@@ -16,6 +16,18 @@ html
         a(href='http://github.com/learnboost/stylus') Fork me on GitHub
       #content
         .example
+          h2 CSS needs a hero
+          pre
+            | body {
+            |   font: 12px Helvetica, Arial, sans-serif;
+            | }
+            | a.button {
+            |   -webkit-border-radius: 5px;
+            |   -moz-border-radius: 5px;
+            |   border-radius: 5px;
+            | }
+        
+        .example
           h2 What if we could omit braces?
           pre
             | body
@@ -25,7 +37,7 @@ html
             |   -webkit-border-radius: 5px;
             |   -moz-border-radius: 5px;
             |   border-radius: 5px;
-
+        
         .example
           h2 How about semi-colons?
           pre
@@ -49,7 +61,7 @@ html
             |   border-radius 5px
         
         .example
-          h2 Want DRY stylesheets?
+          h2 Keep things DRY
           pre
             | border-radius(args...)
             |   -webkit-border-radius args
@@ -75,7 +87,18 @@ html
             | 
             | a.button
             |   border-radius 5px
-        
+
+        .example
+          h2 Create &amp; Share
+          pre
+            | @import 'vendor'
+            | 
+            | body
+            |   font 12px Helvetica, Arial, sans-serif
+            | 
+            | a.button
+            |   border-radius 5px
+
         .example.closing
           h2 Get styling with Stylus
           p
