--- a/main.css
+++ b/main.css
@@ -49,8 +49,9 @@ h2 {
   margin-top: 25px;
 }
 .example pre {
+  width: 300px;
   background: #fff;
-  padding: 25px;
+  padding: 30px;
   color: #8d8d8d;
   font: 12px / 1.4 monaco, "helvetica neue", helvetica;
   -webkit-border-radius: 5px;
