--- a/assets/main.styl
+++ b/assets/main.styl
@@ -86,6 +86,18 @@ h2
   margin 0
   font-size 18px
 
+a
+  text-decoration none
+  color #B90101
+  &:hover
+    text-decoration underline
+
+ul
+  margin 0
+  padding 0 25px
+  li
+    list-style square
+
 .tagline
   margin 0
   padding 0
