--- a/assets/index.jade
+++ b/assets/index.jade
@@ -118,6 +118,8 @@ html
               li Iteration
               li Nested selectors
               li Parent referencing
+              li Variable function calls
+              li Lexical scoping
               li Built-in functions (over 25)
               li In-language functions
               li Optional compression
