--- a/assets/main.styl
+++ b/assets/main.styl
@@ -75,6 +75,11 @@ html
 body
   padding 120px 150px
   font small 'helvetica neue', helvetica, arial, sans-serif
+  color lighten(dark-gray, 15%)
+
+h1
+h2
+h3
   color dark-gray
 
 h1
@@ -129,6 +134,7 @@ ul
     padding 30px
     color #8D8D8D
     font 12px\/1.4 monaco, 'helvetica neue', helvetica
+    box-shadow rgba(dark-gray, 0.1) -1px -1px
   
 a.button
   clear both
