--- a/assets/main.styl
+++ b/assets/main.styl
@@ -69,8 +69,8 @@ button(font-size = 12px)
 html
   dark = #dadada
   background dark
-  background -moz-linear-gradient(-90deg, #f1f1f1, dark) fixed
-  background -webkit-gradient(linear, left top, left bottom, from(#f1f1f1), to(dark)) fixed
+  background -moz-linear-gradient(-90deg, #fff, dark) fixed
+  background -webkit-gradient(linear, left top, left bottom, from(#fff), to(dark)) fixed
 
 body
   padding 120px 150px
