--- a/test/integration/tests/bifs.length.styl
+++ b/test/integration/tests/bifs.length.styl
@@ -4,6 +4,9 @@ args(n = null)
 vargs(args...)
   length(args)
 
+arguments()
+  length(arguments)
+
 body
   foo length()
   foo length(args())
@@ -12,3 +15,4 @@ body
   foo length(1 2 3)
   foo vargs(1, 2, 3, 4)
   foo args(1 2 3 4 5)
+  foo arguments(1,2,3,4,5,6)
