--- a/test/integration/tests/operators.subscript.styl
+++ b/test/integration/tests/operators.subscript.styl
@@ -1,18 +1,20 @@
 body
   foo ()[0] == null
   foo (((1 2 3)))[0]
-  foo (1 2 3)[0]
-  foo (1 2 3)[1]
-  foo (1 2 3)[2]
-  foo (1 2 3)[3] == null
-  foo (1 2 3)[-1] == null
   foo (1 2 3)['test'] == null
   foo !(1 0)[1]
   foo !(1 0)[0]
   foo - - -(1 2 3 4 5)[4]
-  foo (1 (2 3))[1]
-  foo (1 (2 (3)))
-  foo (1 (2 (3)))[0]
+
+body
+  foo (1 (2 (3 4)))
+  foo (1 (2 (3 4)))[0]
+  foo (1 (2 (3 4)))[1]
+  foo (1 (2 (3 4)))[1][0]
+  foo (1 (2 (3 4)))[1][1]
+  foo (1 (2 (3 4)))[1][1][0]
+  foo (1 (2 (3 4)))[1][1][1]
+  foo (1 (2 (3 4)))[1][1][3]
 
 body
   foo (error 'message')[0]
@@ -30,13 +32,7 @@ size(a, b)
 
 body
   foo size(5, 10)[0]
-
-size(a, b)
-  return (a b)
-
-body
-  foo size(5, 10)[0]
-  foo size(5, 10)[0][1]
+  foo size(5, 10)[1]
 
 size()
   (1 2) (3 4)
@@ -84,4 +80,3 @@ body
   foo size[0]
   foo size[1]
   foo length(size)
-
