--- a/test/integration/tests/for.complex.styl
+++ b/test/integration/tests/for.complex.styl
@@ -20,3 +20,9 @@ body
   for char in a b c d
     for num in 0 1 2 3
       foo num char
+
+fonts = helvetica, arial, sans-serif
+
+body
+  for font in fonts
+    foo font
