Fixed tests due to prev commit

--- a/test/integration/tests/operators.precedence.styl
+++ b/test/integration/tests/operators.precedence.styl
@@ -35,8 +35,10 @@ body
   foo !!true and !!true
 
 body
+  test()
+    5 * 2 - 15 / 2
   // 2.5
-  foo 5 * 2 - 15 / 2
+  foo test()
   foo (5 * 2) - (15 / 2)
 
 body
