--- a/examples/basic.styl
+++ b/examples/basic.styl
@@ -1,5 +1,5 @@
 body a
-  font 12px\/1.3 "Lucida Grande", Arial, sans-serif
+  font 12px/1.3 "Lucida Grande", Arial, sans-serif
   background black
   color #ccc
 
