--- a/examples/functions.styl
+++ b/examples/functions.styl
@@ -7,10 +7,10 @@ pad(x, y, margin = false)
   if margin
     margin y x y x
 
-border-radius(args...)
-  -webkit-border-radius args
-  -moz-border-radius args
-  border-radius args
+border-radius()
+  -webkit-border-radius arguments
+  -moz-border-radius arguments
+  border-radius arguments
 
 lighten(color)
   color - rgba(0,0,0,0.5)
