--- a/examples/implicit-functions.styl
+++ b/examples/implicit-functions.styl
@@ -1,8 +1,8 @@
 
-border-radius(args...)
-  -webkit-border-radius args
-  -moz-border-radius args
-  border-radius args
+border-radius()
+  -webkit-border-radius arguments
+  -moz-border-radius arguments
+  border-radius arguments
 
 form
   border-radius 5px
