--- a/assets/index.jade
+++ b/assets/index.jade
@@ -63,10 +63,10 @@ html
         .example
           h2 Keep things DRY
           pre
-            | border-radius(args...)
-            |   -webkit-border-radius args
-            |   -moz-border-radius args
-            |   border-radius args
+            | border-radius()
+            |   -webkit-border-radius arguments
+            |   -moz-border-radius arguments
+            |   border-radius arguments
             | 
             | body
             |   font 12px Helvetica, Arial, sans-serif
@@ -77,10 +77,10 @@ html
         .example
           h2 How about transparent mixins?
           pre
-            | border-radius(args...)
-            |   -webkit-border-radius args
-            |   -moz-border-radius args
-            |   border-radius args
+            | border-radius()
+            |   -webkit-border-radius arguments
+            |   -moz-border-radius arguments
+            |   border-radius arguments
             | 
             | body
             |   font 12px Helvetica, Arial, sans-serif
