npm install section

--- a/assets/index.jade
+++ b/assets/index.jade
@@ -101,6 +101,7 @@ html
 
         .example.closing
           h2 Get styling with Stylus
+          pre.terminal $ npm install stylus
           p
             | If you want an expressive css language for nodejs with these
             | features or the features listed below, head over to
