--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ html {
 }
 body {
   padding: 120px 150px;
-  font: 14px "helvetica neue", helvetica, arial, sans-serif;
+  font: 14px / 1.4 "helvetica neue", helvetica, arial, sans-serif;
   color: #484848;
 }
 h1,
@@ -28,6 +28,9 @@ a {
 }
 a:hover {
   text-decoration: underline;
+}
+strong {
+  color: #a00;
 }
 ul {
   margin: 0;
@@ -67,7 +70,7 @@ ul li {
 .example {
   margin-top: 25px;
 }
-.example pre {
+pre {
   width: 300px;
   background: #fff;
   padding: 30px;
@@ -80,7 +83,7 @@ ul li {
   -webkit-box-shadow: rgba(34,34,34,0.1) -1px -1px;
   box-shadow: rgba(34,34,34,0.1) -1px -1px;
 }
-.example pre.terminal {
+pre.terminal {
   width: 340px;
   padding: 10px;
   background: #2b2b2b;
@@ -88,44 +91,6 @@ ul li {
   -moz-box-shadow: #fff -1px -1px;
   -webkit-box-shadow: #fff -1px -1px;
   box-shadow: #fff -1px -1px;
-}
-a.button {
-  clear: both;
-  float: left;
-  display: block;
-  padding: 8px 0 9px;
-  background: #e3e3e3;
-  border: 1px solid #bbb;
-  text-shadow: 0 1px 0 #fff;
-  font-size: 12px;
-  font-weight: bold;
-  line-height: 1;
-  text-align: center;
-  text-decoration: none;
-  width: 150px;
-  color: #333;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  -moz-box-shadow: inset 0 0 1px 1px #f6f6f6;
-  -webkit-box-shadow: inset 0 0 1px 1px #f6f6f6;
-  box-shadow: inset 0 0 1px 1px #f6f6f6;
-  -webkit-user-select: none;
-}
-a.button:hover {
-  background: #d9d9d9;
-  color: #222;
-  cursor: pointer;
-  -moz-box-shadow: inset 0 0 1px 1px #eaeaea;
-  -webkit-box-shadow: inset 0 0 1px 1px #eaeaea;
-  box-shadow: inset 0 0 1px 1px #eaeaea;
-}
-a.button:active {
-  background: #d0d0d0;
-  color: #000;
-  -moz-box-shadow: inset 0 0 1px 1px #e3e3e3;
-  -webkit-box-shadow: inset 0 0 1px 1px #e3e3e3;
-  box-shadow: inset 0 0 1px 1px #e3e3e3;
 }
 #ribbon {
   position: absolute;
