--- a/assets/main.styl
+++ b/assets/main.styl
@@ -117,6 +117,7 @@ pre
   padding 30px
   color color = #8D8D8D
   font 12px\/1.4 monaco, 'helvetica neue', helvetica
+  overflow-x auto
   inset()
   &.terminal
     width width + 40
