--- a/assets/index.jade
+++ b/assets/index.jade
@@ -14,6 +14,15 @@ html
         em.css CSS
       #ribbon
         a(href='http://github.com/learnboost/stylus') Fork me on GitHub
+      ul#menu
+        li
+          a(href='docs/selectors.html') Selectors
+        li
+          a(href='docs/variables.html') Variables
+        li
+          a(href='docs/mixins.html') Mixins
+        li
+          a(href='docs/functions.html') Functions
       #content
         .example
           h2 CSS needs a hero
