--- a/assets/main.styl
+++ b/assets/main.styl
@@ -113,12 +113,12 @@ ul
 #menu
   position fixed
   top -5px
-  right 30px
+  right 0
   margin 0
-  padding 15px 0 10px 0
-  background rgba(white,0.4)
+  padding 15px 0 10px 5px
+  background rgba(white,0.3)
   border 1px solid #ddd
-  box-shadow rgba(dark-gray, 0.1) 0 2px 4px
+  box-shadow inset rgba(dark-gray, 0.1) 0 4px 4px
   border-radius 5px
   text-align left
   li
