--- a/assets/main.styl
+++ b/assets/main.styl
@@ -45,6 +45,38 @@ inset()
   border-radius 5px
   box-shadow rgba(dark-gray, 0.1) -1px -1px
 
+scrollbar()
+  html
+    overflow-y auto
+    background-color transparent
+  body
+    position absolute
+    top 0
+    left 0
+    bottom 0
+    right 10px
+    overflow-y scroll
+    overflow-x hidden
+  ::-webkit-scrollbar
+    width 10px
+    height 10px
+  ::-webkit-scrollbar-button:start:decrement
+  ::-webkit-scrollbar-button:start:increment
+    display block
+    height 30px
+    background-color transparent
+  ::-webkit-scrollbar-track-piece
+    background-color rgba(light-gray, .1)
+    border-radius 6px
+    box-shadow inset rgba(light-gray, .5) 0 1px 2px
+  ::-webkit-scrollbar-thumb:vertical
+    height 50px
+    background-color #666
+    border 1px solid #eee
+    border-radius 6px
+
+scrollbar()
+
 html
   dark = #dadada
   background dark
@@ -113,7 +145,7 @@ ul
 #menu
   position fixed
   top -5px
-  right 0
+  right 60px
   margin 0
   padding 15px 0 10px 5px
   background rgba(white,0.3)
