--- a/assets/main.styl
+++ b/assets/main.styl
@@ -63,7 +63,7 @@ scrollbar()
   ::-webkit-scrollbar-button:start:decrement
   ::-webkit-scrollbar-button:start:increment
     display block
-    height 30px
+    height 0
     background-color transparent
   ::-webkit-scrollbar-track-piece
     background-color rgba(light-gray, .1)
@@ -72,8 +72,8 @@ scrollbar()
   ::-webkit-scrollbar-thumb:vertical
     height 50px
     background-color #666
-    border 1px solid #eee
     border-radius 6px
+    box-shadow inset dark-gray 0 1px 3px
 
 scrollbar()
 
