--- a/assets/main.styl
+++ b/assets/main.styl
@@ -68,12 +68,12 @@ scrollbar()
   ::-webkit-scrollbar-track-piece
     background-color rgba(light-gray, .1)
     border-radius 6px
-    box-shadow inset rgba(light-gray, .5) 0 1px 2px
+    box-shadow inset rgba(light-gray, .5) 0 2px 2px
   ::-webkit-scrollbar-thumb:vertical
     height 50px
     background-color #666
     border-radius 6px
-    box-shadow inset dark-gray 0 1px 3px
+    box-shadow inset dark-gray 0 0 3px
 
 scrollbar()
 
