fixed horizontal scrollbars

--- a/assets/main.styl
+++ b/assets/main.styl
@@ -70,6 +70,7 @@ scrollbar()
     border-radius 6px
     box-shadow inset rgba(light-gray, .5) 0 2px 2px
   ::-webkit-scrollbar-thumb:vertical
+  ::-webkit-scrollbar-thumb:horizontal
     height 50px
     background-color #666
     border-radius 6px
