--- a/test/integration/tests/interpolation.properties.styl
+++ b/test/integration/tests/interpolation.properties.styl
@@ -1,3 +1,4 @@
+
 vendor(prop, args)
   -webkit-{prop} args
   -moz-{prop} args
@@ -8,3 +9,16 @@ border-radius()
 
 #login
   border-radius 1px 2px / 3px 4px
+
+body
+  prop = 'something'
+  foo bar
+  foo-{prop} foo
+  foo-{prop}-bar foo
+  {prop}-foo foo
+  {prop} foo
+
+body
+  {'test' + '-stuff'}-yup awesome
+  -webkit-{border-radius} awesome
+  -webkit-{box-shadow} awesome
