--- a/assets/index.jade
+++ b/assets/index.jade
@@ -20,6 +20,8 @@ html
         li
           a(href='docs/variables.html') Variables
         li
+          a(href='docs/interpolation.html') Interpolation
+        li
           a(href='docs/operators.html') Operators
         li
           a(href='docs/mixins.html') Mixins
@@ -154,6 +156,7 @@ html
             h3 Features
             ul
               li Variables              
+              li Interpolation
               li Mixins
               li Arithmetic
               li Type coercion
