--- a/test/integration/tests/interpolation.properties.styl
+++ b/test/integration/tests/interpolation.properties.styl
@@ -22,3 +22,10 @@ body
   {'test' + '-stuff'}-yup awesome
   -webkit-{border-radius} awesome
   -webkit-{box-shadow} awesome
+
+test(var, one, two)
+  {var}
+
+body
+  foo test('one', 1, 2)
+  foo test('two', 1, 2)
