--- a/assets/index.jade
+++ b/assets/index.jade
@@ -6,7 +6,8 @@ html
     meta(http-equiv='Content-Type', content='text/html; charset=utf-8')
   body
     #container
-      h1 Stylus
+      h1 
+        a(href='http://learnboost.github.com/stylus') Stylus
       p.tagline 
         em.expressive Expressive, 
         em.dynamic dynamic, 
