--- a/test/integration/tests/media.styl
+++ b/test/integration/tests/media.styl
@@ -1,7 +1,5 @@
 
-@media print
+@media print and (width: 21cm) and (height: 29cm)
   body
-    margin 0
+    margin 3cm
     padding 0
-  .no-print
-    display none
