--- a/test/integration/tests/media.css
+++ b/test/integration/tests/media.css
@@ -4,3 +4,11 @@
     padding: 0;
   }
 }
+@media print {
+  @page :left {
+    margin-left: 5px;
+  }
+  @page :right {
+    margin-right: 5px;
+  }
+}
